# llm-agent

./: .env.yaml.example  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  llm-agent.py  llm-gent.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: conversation-trait-integration.md  index.md  learning-agent-model.md
docs/spec/: agent.md  review-agent-evaluation.md
etc/: infra.yaml  llm-agent.yaml  llm-gent.yaml  llm.yaml  pg.yaml  uvicorn.yaml
etc/agents/: codebase-qna.yaml  joke-teller-p.yaml  joke-teller.yaml  jokester-p.yaml  jokester.yaml
examples/: standalone_joke_teller.py  standalone_jokester.py
llm_agent/: __init__.py  agent.py  config.py  errors.py  task.py
llm_agent/agents/default/: __init__.py  agent.py  factory.py  http.py
llm_agent/agents/joke_teller_p/: __init__.py  agent.py  factory.py
llm_agent/agents/jokester_p/: __init__.py  agent.py  cli.py  factory.py  generate.py  novelty.py  pairing.py  rating.py  schema.py  storage.py  training.py
llm_agent/cli/: __init__.py  cli.py
llm_agent/cli/tools/: __init__.py  agent.py  ask.py  feedback.py  list.py  rate.py  serve.py  start.py  stop.py  train.py
llm_agent/core/: __init__.py  agent.py  conversational.py  errors.py  factory.py  helpers.py  platform.py  prompt_agent.py  runnable.py  task.py  task_executor.py
llm_agent/core/agent/: __init__.py  agent.py  factory.py  identity.py  prog.py  types.py
llm_agent/core/conv/: __init__.py  compactor.py  conversation.py  runner.py
llm_agent/core/conversation/: __init__.py  compactor.py  conversation.py  runner.py  tokens.py
llm_agent/core/governor/: __init__.py  executor.py  helpers.py  interpreter.py  loop.py  messages.py  policy.py  types.py
llm_agent/core/llm/: __init__.py  backend.py  caller.py  json_cleaner.py  types.py
llm_agent/core/memory/: strats.py
llm_agent/core/tools/: __init__.py  base.py  executor.py  factory.py  registry.py
llm_agent/core/traits/: __init__.py  base.py  directive.py  factory.py  http.py  identity.py  learn.py  llm.py  registry.py  saia.py  tools.py
llm_agent/http/: __init__.py  models.py  routes.py
llm_agent/llm/: __init__.py  backend.py  types.py
llm_agent/protocol/: __init__.py
llm_agent/protocol/v1/: __init__.py  messages.py
llm_agent/runtime/: __init__.py  core.py  handle.py  registry.py  runner.py  state.py
llm_agent/runtime/server/: __init__.py  app.py  config.py  management.py  routes.py
llm_agent/runtime/transport/: __init__.py  queue.py
llm_agent/server/: __init__.py  http.py  routes.py
llm_agent/storage/: client.py  schema.py
llm_agent/tools/: __init__.py  base.py  executor.py  registry.py
llm_agent/tools/builtin/: __init__.py  file.py  http.py  shell.py
llm_agent/traits/: __init__.py  base.py  directive.py  http.py  learn.py  llm.py  tools.py
llm_gent/: __init__.py
llm_gent/agents/default/: __init__.py  agent.py  factory.py
llm_gent/agents/jokester_p/: __init__.py  agent.py  cli.py  factory.py  generate.py  history.py  (+7 more)
llm_gent/cli/: cli.py
llm_gent/core/: __init__.py  dispatcher.py  errors.py  helpers.py  platform.py  task.py
llm_gent/runtime/: __init__.py  core.py  handle.py  runner.py
llm_gent/storage/: __init__.py  client.py  schema.py
tests/: conftest.py  helpers.py  test_version.py
tests/e2e/: __init__.py  test_structured_output.py  test_task_execution.py
tests/unit/: test_agent.py  test_cli_tools.py  test_compactor.py  test_conversation.py  test_core.py  test_gateway.py  test_http_trait.py  test_jokester_p.py  test_management_routes.py  test_prompt_agent.py  test_registry.py  test_runner.py  test_state.py  test_storage_trait.py  test_task.py  test_tools.py  test_traits.py  test_transport.py
(+98 files in other folders)
