[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-agent"
version = "0.0.0"
description = "Agent framework with learning capabilities"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["agents", "llm", "ai", "learning"]
authors = [{ name = "serendip-ml", email = "64741025+serendip-ml@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "appinfra",
    "httpx>=0.27",
    # llm-infer, llm-learn, llm-saia: in flux during dev, install locally
    # "llm-learn @ git+https://github.com/serendip-ml/llm-learn.git",
    # "llm-saia @ git+https://github.com/serendip-ml/llm-saia.git",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = [
    "appinfra[fastapi]",
]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
    "ruff>=0.5.0",
]

[project.scripts]
agent = "llm_agent.cli:main"

[project.urls]
Homepage = "https://github.com/serendip-ml/llm-agent"
Documentation = "https://github.com/serendip-ml/llm-agent#readme"
Repository = "https://github.com/serendip-ml/llm-agent"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["llm_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-n", "auto",  # Parallel execution via pytest-xdist
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests (fast, isolated, mocked dependencies)",
    "integration: marks tests as integration tests (real dependencies)",
    "e2e: marks tests as end-to-end tests (full system workflows)",
    "security: marks tests as security tests (injection, validation, XSS)",
    "performance: marks tests as performance tests (benchmarks, load tests)",
    "expected_skip: marks tests expected to skip (e.g., missing external services)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "ARG001", # unused function argument (common in protocols/bases)
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["llm_agent"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]

[tool.coverage.run]
source = ["llm_agent"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/llm_agent/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",  # ellipsis in protocols
]
